sync with mirror